--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    html {
+      font-family: Roboto, system-ui, sans-serif;
+    }
+  }
+
 @layer components {
     .btn-primary {
         @apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover: focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
